cabal-version:       2.4

name:                haskttp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              RedTechKnight
maintainer:          bloodtechknight@protonmail.com
-- copyright:
-- category:
--extra-source-files:

executable haskttp
  main-is:             Main.hs
  --other-modules:    
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
                     , network == 3.1.2.0
                     , bytestring == 0.10.12.0
                     , containers == 0.6.3.1
                     , mtl == 2.2.2
                     , transformers == 0.5.6.2
  hs-source-dirs: src
  default-language:    Haskell2010
