cabal-version:       2.4

name:                haskttp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              RedTechKnight
maintainer:          bloodtechknight@protonmail.com
-- copyright:
-- category:
--extra-source-files:

executable haskttp
  main-is:             Main.hs
  other-modules:    Request.Lexer
                  , Request.Parser
                  , Server
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
                     , network == 3.1.2.0
                     , bytestring == 0.10.12.0
                     , containers == 0.6.3.1
                     , mtl == 2.2.2
                     , transformers == 0.5.6.2
                     , hectoparsec
                     , errata == 0.2.0.0
                     , parser-combinators == 1.2.1
                     , async == 2.2.2
                     , lifted-async == 0.10.1.2
                     , hedgehog  == 1.0.3
  hs-source-dirs: src
                , src/Request
              
  default-language:    Haskell2010

Test-Suite haskttp-tests
           type: exitcode-stdio-1.0
           hs-source-dirs: test
                         , src
           main-is: Test.hs
           --test-module: Test
           other-modules: Server
                        , Request.Lexer
                        , Request.Parser
                        
           build-depends: base ^>=4.13.0.0
                        , network == 3.1.2.0
                        , bytestring == 0.10.12.0
                        , containers == 0.6.3.1
                        , mtl == 2.2.2
                        , transformers == 0.5.6.2
                        , Cabal == 3.2.0.0
                        , async == 2.2.2
                        , hectoparsec
                        , errata == 0.2.0.0
                        , parser-combinators == 1.2.1
                        , lifted-async == 0.10.1.2
                        , hedgehog == 1.0.3
                        
           default-language: Haskell2010
                